API VE FIREBASE DÜZENLEMELERİ

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BookBud</string>
+    <string name="default_web_client_id">894972923120-g9g7gmn68l403of74sm5d33llom6e7k0.apps.googleusercontent.com</string>
 </resources>
